--- a/src/main/resources/admin/admin.html
+++ b/src/main/resources/admin/admin.html
@@ -3,17 +3,17 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="bower_components/semantic-ui/dist/semantic.min.css"/>
+    <link rel="stylesheet" href="/bower_components/semantic-ui/dist/semantic.min.css"/>
     <link rel="stylesheet" href="admin.css"/>
 </head>
 <body>
 <h1 class="ui header" id="page-header">
     <i class="rocket icon"></i>
 
-    <div class="content">
+    <span class="content">
         Repox
-        <div class="sub header">Make your sbt more responsive.</div>
-    </div>
+        <span class="sub header">Make your sbt more responsive.</span>
+    </span>
 </h1>
 <div id="app">
     <nav class="ui pointing menu" id="mainMenu">
@@ -37,8 +37,8 @@
     </section>
 </div>
 
-<script src="bower_components/jquery/dist/jquery.min.js"></script>
-<script src="bower_components/semantic-ui/dist/semantic.min.js"></script>
+<script src="/bower_components/jquery/dist/jquery.min.js"></script>
+<script src="/bower_components/semantic-ui/dist/semantic.min.js"></script>
 <script src="bundle.js"></script>
 </body>
 </html>
