replace vue model with ajax response howto

--- a/src/main/resources/admin/upstream/template.html
+++ b/src/main/resources/admin/upstream/template.html
@@ -26,7 +26,7 @@
                 <div class="inline field">
                     <div class="ui toggle checkbox">
                         <input type="checkbox">
-                        <label>{{isPureMaven}}</label>
+                        <label>{{maven ? 'Yes' : 'No'}}</label>
                     </div>
                 </div>
             </td>
@@ -34,7 +34,7 @@
                 <div class="inline field">
                     <div class="ui toggle checkbox">
                         <input type="checkbox">
-                        <label>{{isGetOnly}}</label>
+                        <label>{{getOnly ? 'Yes' : 'No'}}</label>
                     </div>
                 </div>
             </td>
