base page for all config channel

--- a/src/main/resources/admin/admin.html
+++ b/src/main/resources/admin/admin.html
@@ -12,8 +12,7 @@
 
     <span class="content">
         Repox
-        <br/>
-        <span class="sub header">Make your sbt more responsive.</span>
+        <div class="sub header">Make your sbt more responsive.</div>
     </span>
 </h1>
 <div id="app" ng-app="repoxApp">
@@ -24,10 +23,10 @@
         <a class="{{activeOn('/proxies')}} orange item" href="#/proxies">
             <i class="external link icon"></i> Proxies
         </a>
-        <a class="{{activeOn('/immediate404')}} purple item" href="#/immediate404">
+        <a class="{{activeOn('/immediate404Rules')}} purple item" href="#/immediate404Rules">
             <i class="hide icon"></i> Immediate 404 Rules
         </a>
-        <a class="{{activeOn('/expire')}} red item" href="#/expire">
+        <a class="{{activeOn('/expireRules')}} red item" href="#/expireRules">
             <i class="refresh icon"></i> Expire Rules
         </a>
         <a class="{{activeOn('/parameters')}} blue item" href="#/parameters">
