--- a/src/main/resources/admin/admin.html
+++ b/src/main/resources/admin/admin.html
@@ -20,6 +20,9 @@
         <a class="{{activeOn('/upstreams')}} teal item" href="#/upstreams">
             <i class="vertically flipped sitemap icon"></i> Upstream Repositories
         </a>
+        <a class="{{activeOn('/connectors')}} green item" href="#/connectors">
+            <i class="compress link icon"></i> Connectors
+        </a>
         <a class="{{activeOn('/proxies')}} orange item" href="#/proxies">
             <i class="external link icon"></i> Proxies
         </a>
