include ng-file-upload.min.js in assembly

--- a/src/main/resources/admin/admin.html
+++ b/src/main/resources/admin/admin.html
@@ -65,8 +65,8 @@
 <script src="/admin/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="/admin/bower_components/semantic-ui/dist/semantic.min.js"></script>
 <script src="/admin/bower_components/underscore/underscore-min.js"></script>
-<script src="/admin/bower_components/angular/angular.js"></script>
-<script src="/admin/bower_components/angular-route/angular-route.js"></script>
+<script src="/admin/bower_components/angular/angular.min.js"></script>
+<script src="/admin/bower_components/angular-route/angular-route.min.js"></script>
 <script src="/admin/bower_components/ng-file-upload/ng-file-upload.min.js"></script>
 <script src="admin.js"></script>
 </body>
