redirect / to /admin/index.html

--- a/src/main/resources/admin/index.html
+++ b/src/main/resources/admin/index.html
@@ -21,7 +21,7 @@
             Repox 的设置进行微调.
             广谈公服的配置是长时间的观察和调整的结果, 目前至少是对电信线路的使用是友好和优化的, 也欢迎其它运营商的用户向我们反馈使用体验. 为了方便用户的使用, 我们特地为 Repox 添加了配置数据的 <a
                 href="https://github.com/Centaur/repox/issues/22">导入/导出</a> 功能, 并把广谈公服的最新配置数据在本页面中提供 <a
-                href="http://repox.gtan.com/admin/repox.config.json">下载</a>.
+                href="http://repox.gtan.com:8078/admin/repox.config.json">下载</a>.
         </p>
         <h1>新用户应该知道的事</h1>
         <p><i class="alarm outline icon"></i> Repox使用中的任何问题可直接联系 43284683@qq, 他一般在"无水Scala QQ群" (231809997) 活动.
