Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <li>Repox使用中的任何问题 (例如, 有些 artifact 托管在自己的小众仓库里, 可以申请将此仓库加入公服) 请到github上<a href="https://github.com/Centaur/repox/issues">提交issue</a>
 </li>
 <li>社区公服没有配置任何SNAPSHOT仓库, 因此所有SNAPSHOT artifacts都会404.</li>
-<li>感谢 <a href="https://github.com/getlantern/lantern">Lantern</a>, 社区公服已连通 Twitter 仓库. ~~ twitter 的项目很多依赖仅在twitter自己的仓库中托管, 由于 GFW, 广谈公服无法连接此仓库, 因此无法解析这些依赖. ~~ </li>
+<li>感谢 <a href="https://github.com/getlantern/lantern">Lantern</a>, 社区公服已连通 Twitter 仓库. <strike> twitter 的项目很多依赖仅在twitter自己的仓库中托管, 由于 GFW, 广谈公服无法连接此仓库, 因此无法解析这些依赖. </strike> </li>
 <li>在自己安装 Repox 之前, 强烈建议先按照<a href="https://github.com/Centaur/repox/wiki/%E5%85%A5%E9%97%A8%E6%8C%87%E5%8D%97">这篇文档</a>所述, 配置使用社区公服至少一次，对 Repox 能够带来的变化建立直观的感受.</li>
 <li>ibiblio 镜像近来改变策略，如果请求的artifact在镜像中不存在，最新的行为是返回状态码 200，内容是镜像首页列表（旧的行为，也是更正确的行为是返回状态码404）。由于这一改变，使ibiblio镜像完全不适合作为 repox 上游仓库。建议禁用。建议用 central 替代.</li>
 </ul>
