redirect index.html to github page

--- a/src/main/resources/admin/index.html
+++ b/src/main/resources/admin/index.html
@@ -2,41 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Repox - Make sbt more responsive</title>
-    <link rel="stylesheet" href="/admin/bower_components/semantic-ui/dist/semantic.min.css"/>
-    <style>
-        p {
-            font-size: large;
-            line-height: 200%;
-        }
-    </style>
+    <script language="javascript">
+        window.location.href = "http://centaur.github.io/repox/"
+    </script>
 </head>
 <body>
-<div class="ui grid">
-    <div class="centered ten wide column">
-        <h1>广谈公服的配置</h1>
-        <p>
-            由于所面对的问题的特殊性, Repox绝不是一个安装上/跑起来就一劳永逸的工具. 在广谈公服, 我们一直在观察到各个上游仓库的连接情况, 随着时间变迁, 有些仓库的 url 会改变, 有些仓库的行为会改变,
-            所以需要随时对
-            Repox 的设置进行微调.
-            广谈公服的配置是长时间的观察和调整的结果, 目前至少是对电信线路的使用是友好和优化的, 也欢迎其它运营商的用户向我们反馈使用体验. 为了方便用户的使用, 我们特地为 Repox 添加了配置数据的 <a
-                href="https://github.com/Centaur/repox/issues/22">导入/导出</a> 功能, 并把广谈公服的最新配置数据在本页面中提供 <a
-                href="http://repox.gtan.com:8078/admin/repox.config.json">下载</a>.
-        </p>
-        <h1>新用户应该知道的事</h1>
-        <p><i class="alarm outline icon"></i> Repox使用中的任何问题可直接联系 43284683@qq, 他一般在"无水Scala QQ群" (231809997) 活动.
-            当然更好的做法也许是到github上 <a href="https://github.com/Centaur/repox/issues">提交issue</a>
-        </p>
-        <p><i class="alarm outline icon"></i>  ibiblio 镜像近来改变策略，如果请求的artifact在镜像中不存在，最新的行为是返回状态码 200，内容是镜像首页列表（旧的行为，也是更正确的行为是返回状态码
-            404）。由于这一改变，使ibiblio镜像完全不适合作为 repox 上游仓库。建议禁用。建议用 central 替代.
-        </p>
-        <p><i class="alarm outline icon"></i>  广谈公服没有配置任何SNAPSHOT仓库, 因此所有SNAPSHOT artifacts都会404.</p>
-        <p><i class="alarm outline icon"></i>  twitter 的项目很多依赖仅在twitter自己的仓库中托管, 由于 GFW, 广谈公服无法连接此仓库, 因此无法解析这些依赖.</p>
-        <p><i class="alarm outline icon"></i>  在自己安装 Repox 之前, 强烈建议先按照 <a
-                href="https://github.com/Centaur/repox/wiki/%E5%85%A5%E9%97%A8%E6%8C%87%E5%8D%97">这篇文档</a> 所述,
-            配置使用广谈公服至少一次，对 Repox 能够带来的变化建立直观的感受.
-        </p>
-    </div>
-</div>
+    如果浏览器没有自动跳转, 请点击 <a href="http://centaur.github.io/repox/">这里</a>
 </body>
 </html>
