community server page

--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
       <h1 class="project-name">Repox 社区公服</h1>
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/Centaur/repox" class="btn">View on GitHub</a>
-      <a href="https://github.com/Centaur/repox/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/Centaur/repox/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
@@ -41,10 +39,11 @@
 
 <p>Repox 公服（ <a href="http://repox.gtan.com:8078">http://repox.gtan.com:8078</a> ） 已于2016年3月12日正式迁移到阿里云上。感谢 <a href="https://github.com/gowuliao" class="user-mention">@gowuliao</a> 捐助的 ECS 主机。公服的名称也由 “广谈公服” 正式更改为 “社区公服”.</p>
 
-<p>这台主机配置不高，仅有 1G 内存 1M 带宽，老用户可能在下载诸如 <code>scala-library-2.x.x.jar</code> 时感觉到耗时明显较长。为了提升大家的使用体验，我们决定在社区里发起募捐，请向 <a href="https://github.com/gowuliao" class="user-mention">@gowuliao</a> 的支付宝帐号 转账完成捐助。所有捐助的款项将全部用于云主机的升配。我们大致算了一下，将带宽升至 5M 每年需募捐的金额约为 2500元 - 3500元 。</p>
+<p>这台主机配置不高，仅有 1G 内存 1M 带宽，老用户可能在下载诸如 <code>scala-library-2.x.x.jar</code> 时感觉到耗时明显较长。为了提升大家的使用体验，我们决定在社区里发起募捐，请向 <a href="https://github.com/gowuliao" class="user-mention">@gowuliao</a> 的 Repox 专用支付宝帐号转账完成捐助。<strong>所有募得款项将全部用于云主机的升配, 并在本页面公示所有收支情况</strong>。我们大致算了一下，将带宽升至 5M 每年需募捐的金额约为 2500元 - 3500元 。</p>
 
 <p>请注意：此项捐助完全是自愿的。进行捐助的用户并不会因此获得任何特权。 </p>
 
+      <img src="img/donate.jpg" alt="二维码">
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Centaur/repox">Repox 社区公服</a> is maintained by <a href="https://github.com/Centaur">Centaur</a>.</span>
 
