export community server config publicly

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h2>
 <a id="配置" class="anchor" href="#%E9%85%8D%E7%BD%AE" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>配置</h2>
 
-<p>由于所面对的问题的特殊性, Repox绝不是一个安装上/跑起来就一劳永逸的工具. 在社区公服, 我们一直在观察到各个上游仓库的连接情况, 随着时间变迁, 有些仓库的 url 会改变, 有些仓库的行为会改变,所以需要随时对Repox 的设置进行微调. 社区公服的配置是长时间的观察和调整的结果, 欢迎用户向我们反馈使用体验. 为了方便用户的使用, 我们特地为 Repox 添加了配置数据的<a href="https://github.com/Centaur/repox/issues/22">导入/导出</a>功能. 社区公服的最新配置可以在 [此处](http://repox.gtan.com:8078/admin/exportConfig) 下载.</p>
+<p>由于所面对的问题的特殊性, Repox绝不是一个安装上/跑起来就一劳永逸的工具. 在社区公服, 我们一直在观察到各个上游仓库的连接情况, 随着时间变迁, 有些仓库的 url 会改变, 有些仓库的行为会改变,所以需要随时对Repox 的设置进行微调. 社区公服的配置是长时间的观察和调整的结果, 欢迎用户向我们反馈使用体验. 为了方便用户的使用, 我们特地为 Repox 添加了配置数据的<a href="https://github.com/Centaur/repox/issues/22">导入/导出</a>功能. 社区公服的最新配置可以在 <a href="http://repox.gtan.com:8078/admin/exportConfig">此处</a> 下载.</p>
 
 <h2>
 <a id="新用户应该知道的事" class="anchor" href="#%E6%96%B0%E7%94%A8%E6%88%B7%E5%BA%94%E8%AF%A5%E7%9F%A5%E9%81%93%E7%9A%84%E4%BA%8B" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>新用户应该知道的事</h2>
