--- a/index.html
+++ b/index.html
@@ -39,10 +39,41 @@
 
 <p>Repox 公服（ <a href="http://repox.gtan.com:8078">http://repox.gtan.com:8078</a> ） 已于2016年3月12日正式迁移到阿里云上。感谢 <a href="https://github.com/gowuliao" class="user-mention">@gowuliao</a> 捐助的 ECS 主机。公服的名称也由 “广谈公服” 正式更改为 “社区公服”.</p>
 
-<p>这台主机配置不高，仅有 1G 内存 1M 带宽，老用户可能在下载诸如 <code>scala-library-2.x.x.jar</code> 之类较大的包时感觉到耗时明显较长。为了提升大家的使用体验，我们决定在社区里发起募捐，请向 <a href="https://github.com/gowuliao" class="user-mention">@gowuliao</a> 的 Repox 专用支付宝帐号转账完成捐助。<strong>所有募得款项将全部用于云主机的升配, 并在本页面公示所有收支情况</strong>。我们大致算了一下，将带宽升至 5M 每年需募捐的金额约为 2500元 - 3500元 。</p>
+<p>这台主机配置不高，基础带宽为 1M，老用户可能在下载诸如 <code>scala-library-2.x.x.jar</code> 之类较大的包时感觉到耗时明显较长。为了提升大家的使用体验，我们决定在社区里发起募捐，请向 <a href="https://github.com/gowuliao" class="user-mention">@gowuliao</a> 的 Repox 专用支付宝帐号转账完成捐助。<strong>所有募得款项将全部用于云主机的升配, 并在本页面公示所有收支情况</strong>。</p>
 
 <p>请注意：此项捐助完全是自愿的。进行捐助的用户并不会因此获得任何特权。 </p>
-
+<table>
+  <caption>资金明细</caption>
+  <thead>
+    <th>类型</th>
+    <th>捐款人/详情</th>
+    <th>金额（￥）</th>
+    <th>日期</th>
+  </thead>
+  <tbody>
+    <tr><td>升配</td><td>1M升至2M, 至 2016.06.30</td><td>-10.82</td><td>2016.05.27</td></tr>
+    <tr><td>捐赠</td><td>姗姗</td><td>+10</td><td>2016.05.27</td></tr>
+    <tr><td>捐赠</td><td>跃</td><td>+100</td><td>2016.05.18</td></tr>
+    <tr><td>捐赠</td><td>iwish</td><td>+5</td><td>2016.05.09</td></tr>
+    <tr><td>捐赠</td><td>立锋</td><td>+10</td><td>2016.05.04</td></tr>
+    <tr><td>捐赠</td><td>昌升</td><td>+50</td><td>2016.04.28</td></tr>
+    <tr><td>捐赠</td><td>笋干太咸</td><td>+66</td><td>2016.04.07</td></tr>
+    <tr><td>捐赠</td><td>差距</td><td>+20</td><td>2016.03.18</td></tr>
+    <tr><td>捐赠</td><td>建良</td><td>+50</td><td>2016.03.15</td></tr>
+    <tr><td>捐赠</td><td>智超</td><td>+20</td><td>2016.03.12</td></tr>
+    <tr><td>捐赠</td><td>一罡</td><td>+20</td><td>2016.03.12</td></tr>
+    <tr><td>捐赠</td><td>一日三醒</td><td>+20</td><td>2016.03.12</td></tr>
+    <tr><td>捐赠</td><td>羊八井</td><td>+100</td><td>2016.03.12</td></tr>
+    <tr><td>捐赠</td><td>一米阳光</td><td>+20</td><td>2016.03.12</td></tr>
+    <tr><td>捐赠</td><td>悠哉</td><td>+300</td><td>2016.03.12</td></tr>
+    <tr><td>捐赠</td><td>朔源</td><td>+100</td><td>2016.03.12</td></tr>
+    <tr><td>捐赠</td><td>叫我老陈行了吧</td><td>+20</td><td>2016.03.12</td></tr>
+    <tr><td colspan="4" align="right">捐赠总计：911</td></tr>
+    <tr><td colspan="4" align="right">支出总计：-10.82</td></tr>
+    <tr><td colspan="4" align="right">余额：900.18</td></tr>
+  </tbody>
+</table>
+<p>感谢所有的捐赠者。以上信息如有遗漏，请与 43284683 AT qq.com 取得联系。</p>
       <img src="img/donate.jpg" alt="二维码">
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Centaur/repox">Repox 社区公服</a> is maintained by <a href="https://github.com/Centaur">Centaur</a>.</span>
@@ -52,6 +83,6 @@
 
     </section>
 
-  
+
   </body>
 </html>
