--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
     <th>日期</th>
   </thead>
   <tbody>
+    <tr><td>续费</td><td>至 2017.06.30</td><td>-450</td><td>2016.06.29</td></tr>
+    <tr><td>捐赠</td><td>小磊</td><td>+10</td><td>2016.06.23</td></tr>
+    <tr><td>捐赠</td><td>牛牛跳水</td><td>+50</td><td>2016.06.16</td></tr>
+    <tr><td>捐赠</td><td>心尖偏左</td><td>+10</td><td>2016.06.15</td></tr>
     <tr><td>升配</td><td>1M升至2M, 至 2016.06.30</td><td>-10.82</td><td>2016.05.27</td></tr>
     <tr><td>捐赠</td><td>姗姗</td><td>+10</td><td>2016.05.27</td></tr>
     <tr><td>捐赠</td><td>跃</td><td>+100</td><td>2016.05.18</td></tr>
@@ -68,9 +72,9 @@
     <tr><td>捐赠</td><td>悠哉</td><td>+300</td><td>2016.03.12</td></tr>
     <tr><td>捐赠</td><td>朔源</td><td>+100</td><td>2016.03.12</td></tr>
     <tr><td>捐赠</td><td>叫我老陈行了吧</td><td>+20</td><td>2016.03.12</td></tr>
-    <tr><td colspan="4" align="right">捐赠总计：911</td></tr>
-    <tr><td colspan="4" align="right">支出总计：-10.82</td></tr>
-    <tr><td colspan="4" align="right">余额：900.18</td></tr>
+    <tr><td colspan="4" align="right">捐赠总计：981</td></tr>
+    <tr><td colspan="4" align="right">支出总计：-460.82</td></tr>
+    <tr><td colspan="4" align="right">余额：520.18</td></tr>
   </tbody>
 </table>
 <p>感谢所有的捐赠者。以上信息如有遗漏，请与 43284683 AT qq.com 取得联系。</p>
