捐赠详情 2016年8月21日 更新

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
     <th>日期</th>
   </thead>
   <tbody>
+    <tr><td>捐赠</td><td>大魔头</td><td>+300</td><td>2016.08.21</td></tr>
+    <tr><td>捐赠</td><td>呼建新</td><td>+20</td><td>2016.08.15</td></tr>
+    <tr><td>捐赠</td><td>艳珍</td><td>+50</td><td>2016.07.28</td></tr>
+    <tr><td>捐赠</td><td>美丽</td><td>+20</td><td>2016.07.18</td></tr>
     <tr><td>续费</td><td>至 2017.06.30</td><td>-450</td><td>2016.06.29</td></tr>
     <tr><td>捐赠</td><td>小磊</td><td>+10</td><td>2016.06.23</td></tr>
     <tr><td>捐赠</td><td>牛牛跳水</td><td>+50</td><td>2016.06.16</td></tr>
@@ -65,19 +69,19 @@
     <tr><td>捐赠</td><td>差距</td><td>+20</td><td>2016.03.18</td></tr>
     <tr><td>捐赠</td><td>建良</td><td>+50</td><td>2016.03.15</td></tr>
     <tr><td>捐赠</td><td>智超</td><td>+20</td><td>2016.03.12</td></tr>
-    <tr><td>捐赠</td><td>一罡</td><td>+20</td><td>2016.03.12</td></tr>
+    <tr><td>捐赠</td><td>(应捐赠者要求隐藏)</td><td>+20</td><td>2016.03.12</td></tr>
     <tr><td>捐赠</td><td>一日三醒</td><td>+20</td><td>2016.03.12</td></tr>
     <tr><td>捐赠</td><td>羊八井</td><td>+100</td><td>2016.03.12</td></tr>
     <tr><td>捐赠</td><td>一米阳光</td><td>+20</td><td>2016.03.12</td></tr>
     <tr><td>捐赠</td><td>悠哉</td><td>+300</td><td>2016.03.12</td></tr>
     <tr><td>捐赠</td><td>朔源</td><td>+100</td><td>2016.03.12</td></tr>
     <tr><td>捐赠</td><td>叫我老陈行了吧</td><td>+20</td><td>2016.03.12</td></tr>
-    <tr><td colspan="4" align="right">捐赠总计：981</td></tr>
+    <tr><td colspan="4" align="right">捐赠总计：1371</td></tr>
     <tr><td colspan="4" align="right">支出总计：-460.82</td></tr>
-    <tr><td colspan="4" align="right">余额：520.18</td></tr>
+    <tr><td colspan="4" align="right">余额：910.18</td></tr>
   </tbody>
 </table>
-<p>感谢所有的捐赠者。以上信息如有遗漏，请与 43284683 AT qq.com 取得联系。</p>
+<p>感谢所有的捐赠者。由于精力有限, 以上信息可能不能实时更新, 一般是隔一两个月更新一次。如有任何疑问或要求，请与 43284683 AT qq.com 取得联系。</p>
       <img src="img/donate.jpg" alt="二维码">
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Centaur/repox">Repox 社区公服</a> is maintained by <a href="https://github.com/Centaur">Centaur</a>.</span>
