--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
     <th>日期</th>
   </thead>
   <tbody>
+    <tr><td>捐赠</td><td>Chesley</td><td>+50</td><td>2017.02.25</td></tr>
+    <tr><td>捐赠</td><td>...</td><td>+25</td><td>2017.02.07</td></tr>
+    <tr><td>捐赠</td><td>icefox</td><td>+20</td><td>2016.12.22</td></tr>
+    <tr><td>捐赠</td><td>啸</td><td>+7</td><td>2016.12.17</td></tr>
     <tr><td>捐赠</td><td>贺广武</td><td>+20</td><td>2016.12.08</td></tr>
     <tr><td>捐赠</td><td>GSY</td><td>+20</td><td>2016.11.11</td></tr>
     <tr><td>捐赠</td><td>凯虹</td><td>+100</td><td>2016.10.21</td></tr>
@@ -85,9 +89,9 @@
     <tr><td>捐赠</td><td>悠哉</td><td>+300</td><td>2016.03.12</td></tr>
     <tr><td>捐赠</td><td>朔源</td><td>+100</td><td>2016.03.12</td></tr>
     <tr><td>捐赠</td><td>叫我老陈行了吧</td><td>+20</td><td>2016.03.12</td></tr>
-    <tr><td colspan="4" align="right">捐赠总计：1910.02</td></tr>
+    <tr><td colspan="4" align="right">捐赠总计：2012.02</td></tr>
     <tr><td colspan="4" align="right">支出总计：-460.82</td></tr>
-    <tr><td colspan="4" align="right">余额：1449.20</td></tr>
+    <tr><td colspan="4" align="right">余额：1551.20</td></tr>
   </tbody>
 </table>
 <p>感谢所有的捐赠者。由于精力有限, 以上信息可能不能实时更新, 一般是隔一两个月更新一次。如有任何疑问或要求，请与 43284683 AT qq.com 取得联系。</p>
